--- a/src/stylesheets/lib.css
+++ b/src/stylesheets/lib.css
@@ -3,8 +3,8 @@
 LIB
 Library css.
 
-Autor: Pablo Pizarro R. @ppizarror.com
-Licencia MIT
+Author: Pablo Pizarro R. @ppizarror.com
+License MIT
 */
 
 /**
