--- a/src/stylesheets/loading.css
+++ b/src/stylesheets/loading.css
@@ -3,8 +3,8 @@
 LOADING
 Loading layer panel.
 
-Autor: Pablo Pizarro R. @ppizarror.com
-Licencia MIT
+Author: Pablo Pizarro R. @ppizarror.com
+License MIT
 */
 
 /**
