--- a/src/stylesheets/root.css
+++ b/src/stylesheets/root.css
@@ -3,8 +3,8 @@
 ROOT
 Main page fixes.
 
-Autor: Pablo Pizarro R. @ppizarror.com
-Licencia MIT
+Author: Pablo Pizarro R. @ppizarror.com
+License MIT
 */
 
 /**
