--- a/src/stylesheets/viewer.css
+++ b/src/stylesheets/viewer.css
@@ -6,3 +6,19 @@ Viewer style.
 Author: Pablo Pizarro R. @ppizarror.com
 License MIT
 */
+
+#viewer {
+	background-image: linear-gradient(0deg, #17171e, #d3ecff);
+	bottom: 0;
+	display: block;
+	float: right;
+	height: 100%;
+	min-width: 640px;
+	outline: none;
+	padding: 0;
+	position: absolute;
+	right: 0;
+	text-align: center;
+	top: 0;
+	width: 100%;
+}
