--- a/src/stylesheets/root.css
+++ b/src/stylesheets/root.css
@@ -21,6 +21,8 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 	font-family: sans-serif;
 	font-size: 15px !important;
+	min-height: 480px;
+	min-width: 640px;
 	overflow-x: hidden;
 	overflow-y: hidden;
 	shape-rendering: auto;
@@ -96,7 +98,7 @@ Selectors
 	padding: 0 5px;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 640px) {
 	.common-selector {
 		-moz-border-radius: 3px;
 		-webkit-border-radius: 3px;
