Added win check condition

--- a/src/stylesheets/viewer.css
+++ b/src/stylesheets/viewer.css
@@ -8,7 +8,7 @@ License MIT
 */
 
 #viewer {
-	background-image: linear-gradient(0deg, #4b3f28 0%, #464436 10%, #3f4c4b 25%, #33586e 50%, #28628b 75%, #1e6eac 100%);
+	background-image: linear-gradient(0deg, #182684 0%, #85c6f8 100%);
 	bottom: 0;
 	display: block;
 	float: right;
