--- a/src/stylesheets/root.css
+++ b/src/stylesheets/root.css
@@ -17,7 +17,7 @@ body {
 	-ms-text-size-adjust: 100%;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
-	background-color: #303030;
+	background-color: #85c6f8;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 	font-family: sans-serif;
 	font-size: 15px !important;
