--- a/src/stylesheets/game.css
+++ b/src/stylesheets/game.css
@@ -31,7 +31,10 @@ Left column, contains buttons
 }
 
 .game-ui-left-column #game-ui-button-menu {
+	background-color: #000000;
+	color: #ffffff;
 	float: left;
+	font-weight: 300;
 	left: 0;
 	margin-left: 1%;
 	margin-top: 1%;
@@ -47,7 +50,7 @@ Left column, contains buttons
 	box-shadow: 0 0 7px rgba(0, 0, 0, 0.4);
 	display: flex;
 	font-size: 1.2rem;
-	opacity: 0.7;
+	opacity: 0.8;
 	position: absolute;
 }
 
@@ -122,7 +125,7 @@ Tile info
 	font-weight: 400;
 	margin: 0 1% 1% 0;
 	padding-bottom: 1%;
-	padding-right: 5%;
+	padding-right: 1.6%;
 	text-align: right;
 	text-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
 }
@@ -149,19 +152,22 @@ Tile info
 /**
 Scoreboard
  */
-.game-ui-right-column #game-bookmarks-container {
+.game-ui-right-column #game-scoreboard-container {
 	background-color: rgba(16, 16, 16, 0.70);
 	border-radius: 10px;
+	bottom: 0;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.49);
 	color: #ffffff;
 	display: inline-block;
 	float: right;
 	font-size: 1rem;
 	font-weight: 300;
-	height: 60%;
-	margin-right: 6%;
-	margin-top: 5%;
-	max-width: 230px;
+	height: 50%;
+	margin-bottom: 1%;
+	margin-right: 1%;
+	max-width: 240px;
+	position: fixed;
+	right: 0;
 	text-align: left;
 	width: 69%;
 }
@@ -169,7 +175,7 @@ Scoreboard
 /**
 Header, contains title of the bookmarks
  */
-.game-ui-right-column #game-bookmark-header {
+.game-ui-right-column #game-scoreboard-header {
 	background-color: rgba(0, 0, 0, 0.73);
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
@@ -177,47 +183,47 @@ Header, contains title of the bookmarks
 	padding: 5px 5px 10px 10px;
 }
 
-.game-ui-right-column #game-bookmark-title {
+.game-ui-right-column #game-scoreboard-title {
 	font-size: 1.5rem;
 }
 
-.game-ui-right-column #game-bookmark-name {
+.game-ui-right-column #game-scoreboard-name {
 	font-size: 1.1rem;
 	margin-top: -5px;
 }
 
 @media screen and (max-width: 800px) {
-	.game-ui-right-column #game-bookmark-header {
+	.game-ui-right-column #game-scoreboard-header {
 		padding: 4px 4px 4px 10px;
 	}
 
-	.game-ui-right-column #game-bookmark-title {
+	.game-ui-right-column #game-scoreboard-title {
 		font-size: 1.1rem;
 	}
 
-	.game-ui-right-column #game-bookmark-name {
+	.game-ui-right-column #game-scoreboard-name {
 		font-size: 0.9rem;
 		margin-top: -2px;
 	}
 }
 
-.game-ui-right-column #game-bookmark-content {
+.game-ui-right-column #game-scoreboard-content {
 	overflow-x: hidden;
 	overflow-y: auto;
 	height: 352px;
 }
 
-.game-ui-right-column #game-bookmark-content::-webkit-scrollbar-track {
+.game-ui-right-column #game-scoreboard-content::-webkit-scrollbar-track {
 	/* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
 	/* border-radius: 0 0 10px 10px; */
 	border-radius: 10px;
 }
 
-.game-ui-right-column #game-bookmark-content::-webkit-scrollbar {
+.game-ui-right-column #game-scoreboard-content::-webkit-scrollbar {
 	width: 10px;
 }
 
-.game-ui-right-column #game-bookmark-content::-webkit-scrollbar-thumb {
+.game-ui-right-column #game-scoreboard-content::-webkit-scrollbar-thumb {
 	/* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
 	/* border-radius: 0 0 10px 10px; */
 	background-color: #474747;
@@ -227,31 +233,31 @@ Header, contains title of the bookmarks
 /**
 Boomark entry
  */
-.game-ui-right-column .game-bookmark-entry {
+.game-ui-right-column .game-scoreboard-entry {
 	border-bottom: 1px solid rgba(97, 97, 97, 0.55);
 	display: flex;
 	padding-bottom: 3px;
 	width: 100%;
 }
 
-.game-ui-right-column .game-bookmark-entry:hover {
+.game-ui-right-column .game-scoreboard-entry:hover {
 	background-color: rgba(68, 68, 68, 0.25);
 }
 
 @media screen and (max-width: 800px) {
-	.game-ui-right-column .game-bookmark-entry {
+	.game-ui-right-column .game-scoreboard-entry {
 		padding-bottom: 0;
 	}
 }
 
-.game-ui-right-column .game-bookmark-user {
+.game-ui-right-column .game-scoreboard-user {
 	float: left;
 	overflow-x: hidden;
 	padding-left: 10px;
 	width: 70%;
 }
 
-.game-ui-right-column .game-bookmark-username {
+.game-ui-right-column .game-scoreboard-username {
 	font-size: 1.1rem;
 	font-weight: 400;
 	overflow-x: hidden;
@@ -263,7 +269,7 @@ Boomark entry
 }
 
 @media screen and (max-width: 800px) {
-	.game-ui-right-column .game-bookmark-username {
+	.game-ui-right-column .game-scoreboard-username {
 		font-size: 1rem;
 	}
 }
@@ -271,17 +277,17 @@ Boomark entry
 /**
 Bookmark user data
  */
-.game-ui-right-column .game-bookmark-userdata {
+.game-ui-right-column .game-scoreboard-userdata {
 	display: flex;
 }
 
-.game-ui-right-column #game-bookmark-content .game-bookmark-userdata .game-bookmark-userdata-position {
+.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-position {
 	padding-right: 15px;
 	font-weight: 400;
 	font-size: 0.9rem;
 }
 
-.game-ui-right-column #game-bookmark-content .game-bookmark-userdata .game-bookmark-userdata-img img {
+.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-img img {
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.34);
 	display: inline-block;
 	filter: grayscale(0.5);
@@ -290,28 +296,31 @@ Bookmark user data
 	max-height: 0.9rem;
 }
 
-.game-ui-right-column #game-bookmark-content .game-bookmark-userdata .game-bookmark-userdata-date {
+.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-date {
 	font-size: 0.9rem;
 	color: #cfcfcf;
 }
 
 @media screen and (max-width: 800px) {
-	.game-ui-right-column #game-bookmark-content .game-bookmark-userdata .game-bookmark-userdata-position {
+	.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-position {
 		padding-right: 5px;
 		font-size: 0.8rem;
 	}
 
-	.game-ui-right-column #game-bookmark-content .game-bookmark-userdata .game-bookmark-userdata-img img {
+	.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-img img {
 		margin-top: -0.6rem;
 		max-height: 0.7rem;
 	}
 
-	.game-ui-right-column #game-bookmark-content .game-bookmark-userdata .game-bookmark-userdata-date {
+	.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-date {
 		font-size: 0.7rem;
 	}
 }
 
-.game-ui-right-column .game-bookmark-time {
+/**
+Time
+ */
+.game-ui-right-column #game-scoreboard-content .game-scoreboard-time {
 	float: left;
 	font-weight: 400;
 	padding-right: 10px;
@@ -321,9 +330,32 @@ Bookmark user data
 }
 
 @media screen and (max-width: 800px) {
-	.game-ui-right-column .game-bookmark-time {
+	.game-ui-right-column #game-scoreboard-content .game-scoreboard-time {
 		font-size: 0.9rem;
 		padding-right: 5px;
 		padding-top: 10px;
 	}
+}
+
+/**
+Loading panel
+ */
+.game-ui-right-column #game-scoreboard-content .game-scoreboard-loading {
+	height: 100%;
+	text-align: center;
+	width: 100%;
+}
+
+.game-ui-right-column #game-scoreboard-content .game-scoreboard-loading i {
+	color: #929292;
+	font-size: 1.7rem;
+}
+
+/**
+Scoreboard empty
+ */
+.game-ui-right-column #game-scoreboard-content .game-scoreboard-empty {
+	color: #a7a7a7;
+	font-size: 0.9rem;
+	text-align: center;
 }
