Created basic menu interface

--- a/src/stylesheets/game.css
+++ b/src/stylesheets/game.css
@@ -9,6 +9,26 @@ License MIT
 
 /**
 -------------------------------------------------------------------------------
+Generic container
+-------------------------------------------------------------------------------
+ */
+.game-container {
+	background-image: linear-gradient(0deg, #182684 0%, #85c6f8 100%);
+	bottom: 0;
+	float: right;
+	height: 100%;
+	min-width: 640px;
+	outline: none;
+	padding: 0;
+	position: absolute;
+	right: 0;
+	text-align: center;
+	top: 0;
+	width: 100%;
+}
+
+/**
+-------------------------------------------------------------------------------
 Base ui container
 -------------------------------------------------------------------------------
  */
