--- a/src/stylesheets/viewer.css
+++ b/src/stylesheets/viewer.css
@@ -8,19 +8,7 @@ License MIT
 */
 
 #viewer {
-	background-image: linear-gradient(0deg, #182684 0%, #85c6f8 100%);
-	bottom: 0;
-	display: block;
-	float: right;
-	height: 100%;
-	min-width: 640px;
-	outline: none;
-	padding: 0;
-	position: absolute;
-	right: 0;
-	text-align: center;
-	top: 0;
-	width: 100%;
+	display: none;
 }
 
 #viewer-gui {
