--- a/src/stylesheets/menu.css
+++ b/src/stylesheets/menu.css
@@ -94,8 +94,8 @@ Menu subheader
 Content
  */
 #menu-content {
-	overflow-x: hidden;
-	overflow-y: auto;
+	/* overflow-x: hidden; */
+	/* overflow-y: auto; */
 	padding: 10px;
 }
 
@@ -138,6 +138,7 @@ Footer
 	display: flex;
 	font-size: 1rem;
 	font-weight: 300;
+	width: 100%;
 }
 
 @media screen and (max-width: 800px) {
@@ -223,15 +224,19 @@ Language selector on footer
 Menu back
  */
 #menu-subheader .menu-subheader-container {
+	background-color: rgba(160, 160, 160, 0.16);
 	display: flex;
-	padding: 10px;
+	padding: 0;
 	width: 100%;
 }
 
 #menu-subheader .menu-menuback-button {
-	max-width: 80px;
+	box-shadow: inset 0 0 13px 2px rgba(0, 0, 0, 0.29);
+	max-width: 85px;
+	padding-left: 2%;
 	padding-right: 2%;
-	text-align: left;
+	padding-top: 0.15rem;
+	text-align: center;
 	width: 20%;
 }
 
@@ -240,7 +245,7 @@ Menu back
 	color: #ffffff;
 	padding-bottom: 0;
 	padding-top: 0;
-	width: 85%;
+	width: 100%;
 }
 
 #menu-subheader .menu-menuback-title {
@@ -256,4 +261,43 @@ Menu back
 	#menu-subheader .menu-menuback-title {
 		font-size: 1.1rem;
 	}
+}
+
+/**
+Menu input
+ */
+#menu-content .menu-content-input {
+	display: flex;
+	width: 100%;
+}
+
+#menu-content .menu-content-input .menu-content-input-child {
+	float: left;
+	text-align: left;
+}
+
+#menu-content .menu-content-input .menu-content-input-child.menu-content-input-label {
+	font-size: 1.25rem;
+	font-weight: 600;
+	line-height: 200%;
+	overflow: hidden;
+	padding-left: 2rem;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	width: 30%;
+}
+
+@media screen and (max-width: 800px) {
+	#menu-content .menu-content-input .menu-content-input-child.menu-content-input-label {
+		font-size: 1.05rem;
+	}
+}
+
+#menu-content .menu-content-input .menu-content-input-child.menu-content-input-content {
+	vertical-align: middle;
+	width: 70%;
+}
+
+#menu-content .menu-content-input .menu-content-input-child.menu-content-input-content .nice-select {
+	color: #000000;
 }
