--- a/lib/jquery-nice-select/style.css
+++ b/lib/jquery-nice-select/style.css
@@ -1,5 +1,9 @@
 .nice-select {
+	-moz-user-select: none;
+	-ms-user-select: none;
 	-webkit-tap-highlight-color: transparent;
+	-webkit-transition: all 0.2s ease-in-out;
+	-webkit-user-select: none;
 	background-color: #ffffff;
 	border-radius: 5px;
 	border: solid 1px #e0e7ee;
@@ -18,11 +22,7 @@
 	padding-right: 30px;
 	position: relative;
 	text-align: left !important;
-	-webkit-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
 	user-select: none;
 	white-space: nowrap;
 	width: auto;
@@ -120,10 +120,17 @@
 
 /* noinspection Stylelint */
 .nice-select .list {
+	-ms-transform-origin: 50% 0;
+	-ms-transform: scale(0.75) translateY(-21px);
+	-webkit-transform-origin: 50% 0;
+	-webkit-transform: scale(0.75) translateY(-21px);
+	-webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
 	background-color: #ffffff;
 	border-radius: 5px;
 	box-shadow: 0 0 0 1px rgba(68, 88, 112, 0.11);
 	box-sizing: border-box;
+	left: 0;
+	margin-left: -1px;
 	margin-top: 4px;
 	max-height: 30vh;
 	opacity: 0;
@@ -132,14 +139,8 @@
 	pointer-events: none;
 	position: absolute;
 	top: 100%;
-	left: 0;
-	-webkit-transform-origin: 50% 0;
-	-ms-transform-origin: 50% 0;
 	transform-origin: 50% 0;
-	-webkit-transform: scale(0.75) translateY(-21px);
-	-ms-transform: scale(0.75) translateY(-21px);
 	transform: scale(0.75) translateY(-21px);
-	-webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
 	transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
 	z-index: 9;
 }
