--- a/src/stylesheets/menu.css
+++ b/src/stylesheets/menu.css
@@ -127,7 +127,12 @@ Buttons
 	/* background-color: rgba(209, 209, 209, 0.71); */
 	font-size: 1.2rem;
 	min-width: 150px;
+	opacity: 0.9;
 	width: 40%;
+}
+
+#menu-content .menu-main-button .btn:hover {
+	opacity: 1.0;
 }
 
 /**
