--- a/src/stylesheets/root.css
+++ b/src/stylesheets/root.css
@@ -21,7 +21,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 	font-family: sans-serif;
 	font-size: 15px !important;
-	min-height: 480px;
+	min-height: 520px;
 	min-width: 640px;
 	overflow-x: hidden;
 	overflow-y: hidden;
@@ -33,6 +33,24 @@ body {
 		font-size: 13px !important;
 		overflow-x: initial;
 	}
+}
+
+body::-webkit-scrollbar-track {
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+	/* border-radius: 0 0 10px 10px; */
+	/* border-radius: 12px; */
+	background-color: rgba(94, 96, 165, 0.78);
+}
+
+body::-webkit-scrollbar {
+	width: 12px;
+}
+
+body::-webkit-scrollbar-thumb {
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+	/* border-radius: 0 0 10px 10px; */
+	background-color: #363963;
+	border-radius: 10px;
 }
 
 pre {
