--- a/src/stylesheets/menu.css
+++ b/src/stylesheets/menu.css
@@ -21,14 +21,14 @@ Menu root container
 	border-radius: 15px;
 	box-shadow: 0 0 12px rgba(0, 0, 0, 0.40);
 	color: #ffffff;
-	height: 55%;
+	height: 60%;
 	margin: auto;
-	max-height: 550px;
+	max-height: 580px;
 	min-height: 430px;
 }
 
 .menu-container-width {
-	max-width: 680px;
+	max-width: 700px;
 	min-width: 550px;
 	width: 61.875%;
 }
@@ -97,8 +97,8 @@ Menu subheader
 Content
  */
 #menu-content {
-	/* overflow-x: hidden; */
-	/* overflow-y: auto; */
+	overflow-x: hidden;
+	overflow-y: auto;
 	padding: 10px;
 	width: 100%;
 }
@@ -153,6 +153,7 @@ Footer
 	display: flex;
 	font-size: 1rem;
 	font-weight: 300;
+	margin-top: 8px;
 	width: 100%;
 }
 
@@ -185,15 +186,17 @@ Footer
 }
 
 #menu-footer .menu-footer-item.menu-footer-item-other {
+	/*
 	font-size: 1.6rem;
 	line-height: 0.2rem;
 	margin-top: -0.2rem;
+	*/
 	text-align: center;
 }
 
 @media screen and (max-width: 800px) {
 	#menu-footer .menu-footer-item.menu-footer-item-other {
-		font-size: 1.4rem;
+		/* font-size: 1.4rem; */
 	}
 }
 
@@ -395,12 +398,12 @@ How to play
 #menu-content .menu-htp-entry-line {
 	display: flex;
 	flex-direction: row;
-	padding: 0.6rem;
+	padding: 0.3rem;
 	width: 100%;
 }
 
 #menu-content .menu-htp-entry-line .menu-htp-keys {
-	width: 40%;
+	width: 50%;
 }
 
 #menu-content .menu-htp-entry-line .menu-htp-keys img {
@@ -412,7 +415,7 @@ How to play
 	font-weight: 300;
 	line-height: 3rem;
 	text-align: left;
-	width: 60%;
+	width: 50%;
 }
 
 @media screen and (max-width: 800px) {
@@ -424,5 +427,134 @@ How to play
 		font-size: 0.85rem;
 		font-weight: 400;
 		line-height: 2.5rem;
+	}
+}
+
+/**
+Menu help animations
+ */
+#menu-content .shake-lr {
+	-webkit-animation: shake-lr 10s cubic-bezier(0.645, 0.045, 0.355, 1.000) infinite both;
+	animation: shake-lr 10s cubic-bezier(0.645, 0.045, 0.355, 1.000) infinite both;
+}
+
+@-webkit-keyframes shake-lr {
+	0%,
+	100% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+		-webkit-transform-origin: 50% 50%;
+		transform-origin: 50% 50%;
+	}
+	10% {
+		-webkit-transform: rotate(8deg);
+		transform: rotate(8deg);
+	}
+	20%,
+	40%,
+	60% {
+		-webkit-transform: rotate(-10deg);
+		transform: rotate(-10deg);
+	}
+	30%,
+	50%,
+	70% {
+		-webkit-transform: rotate(10deg);
+		transform: rotate(10deg);
+	}
+	80% {
+		-webkit-transform: rotate(-8deg);
+		transform: rotate(-8deg);
+	}
+	90% {
+		-webkit-transform: rotate(8deg);
+		transform: rotate(8deg);
+	}
+}
+
+@keyframes shake-lr {
+	0%,
+	100% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+		-webkit-transform-origin: 50% 50%;
+		transform-origin: 50% 50%;
+	}
+	10% {
+		-webkit-transform: rotate(8deg);
+		transform: rotate(8deg);
+	}
+	20%,
+	40%,
+	60% {
+		-webkit-transform: rotate(-10deg);
+		transform: rotate(-10deg);
+	}
+	30%,
+	50%,
+	70% {
+		-webkit-transform: rotate(10deg);
+		transform: rotate(10deg);
+	}
+	80% {
+		-webkit-transform: rotate(-8deg);
+		transform: rotate(-8deg);
+	}
+	90% {
+		-webkit-transform: rotate(8deg);
+		transform: rotate(8deg);
+	}
+}
+
+/**
+Menu text
+ */
+#menu-content .menu-text {
+	display: flex;
+	flex-direction: row;
+	font-size: 0.91rem;
+	padding-bottom: 1rem;
+	padding-left: 0.35rem;
+	padding-right: 0.35rem;
+	text-align: left;
+	width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+	#menu-content .menu-text {
+		font-size: 0.75rem;
+		padding-bottom: 0.5rem;
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
+
+#menu-content .menu-text.menu-list-item {
+	display: list-item;
+	list-style-type: initial;
+	margin-left: 2rem;
+	padding-right: 2.35rem;
+}
+
+/**
+Menu title
+ */
+#menu-content .menu-title {
+	display: flex;
+	flex-direction: row;
+	font-size: 1.4rem;
+	font-weight: 600;
+	padding-bottom: 0.5rem;
+	padding-left: 0.35rem;
+	padding-right: 0.35rem;
+	text-align: left;
+	width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+	#menu-content .menu-title {
+		font-size: 1.2rem;
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
