--- a/src/stylesheets/game.css
+++ b/src/stylesheets/game.css
@@ -317,7 +317,7 @@ Bookmark user data
 	display: inline-block;
 	filter: grayscale(0.5);
 	height: 0.85rem;
-	margin-right: 0.5rem;
+	margin-left: 0.5rem;
 	margin-top: -0.4rem;
 	width: 1.3rem;
 }
@@ -338,12 +338,12 @@ Bookmark user data
 	}
 
 	.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-img img {
-		margin-left: 0.2rem;
-		margin-top: -0.7rem;
+		margin-top: -0.6rem;
 	}
 
 	.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-date {
 		font-size: 0.7rem;
+		padding-top: 0.05rem;
 	}
 
 	.game-ui-right-column #game-scoreboard-content .game-scoreboard-userdata .game-scoreboard-userdata-img-null {
